beta simulations fail with "dom/base/TabGroup.cpp:154:14: error: unused variable 'rv'"
Categories
(Core :: DOM: Core & HTML, defect, P2)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox71 | --- | fixed |
People
(Reporter: nthomas, Assigned: tt)
References
Details
Attachments
(1 file)
I performed a simulated beta based on mozilla-central code @ 1d189ae70326e415f8590e3aeee24885fb8418bc on the try server. It fails with the changes from bug 1562663.
eg https://taskcluster-artifacts.net/QES03NcuSiiWsndnpTQkKw/0/public/logs/live_backing.log
[task 2019-09-26T23:52:20.114Z] 23:52:20 INFO - In file included from Unified_cpp_dom_base5.cpp:110:
[task 2019-09-26T23:52:20.117Z] 23:52:20 ERROR - /builds/worker/workspace/build/src/dom/base/TabGroup.cpp:154:14: error: unused variable 'rv' [-Werror,-Wunused-variable]
[task 2019-09-26T23:52:20.118Z] 23:52:20 INFO - nsresult rv = nsContentUtils::GenerateUUIDInPlace(agentClusterId);
[task 2019-09-26T23:52:20.118Z] 23:52:20 INFO - ^
[task 2019-09-26T23:52:20.118Z] 23:52:20 INFO - 1 error generated.
Is MOZ_DIAGNOSTIC_ASSERT a no-op with official branding, so that rv is unused ?
| Reporter | ||
Updated•6 years ago
|
| Assignee | ||
Updated•6 years ago
|
| Assignee | ||
Comment 1•6 years ago
|
||
Ah, nika has pointed out the issue on P3 in bug 1562663, but I didn't apply that to P1
| Assignee | ||
Comment 2•6 years ago
|
||
Updated•6 years ago
|
Comment 4•6 years ago
|
||
| bugherder | ||
Description
•