Bug 1584409 - Change the assertion to release to avoid unused variable on beta; r=nika

Differential Revision: https://phabricator.services.mozilla.com/D47397